Header on Mobile Fixed Adjusted - fonts

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
 body {
   font-family: "Roboto", sans-serif;
   font-style: normal;
-  font-size: 1rem;
+  font-size: .8rem;
   font-weight: normal;
   color: #757f95;
   line-height: 1.8;
